--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,7 @@ jobs:
         run:   |
           chmod +x ./scripts/InstallChrome.sh
                       ./scripts/InstallChrome.sh
-      - name: Something
+      - name: Install chromedriver for Linux
         run: chmod +x /home/runner/work/Lab3Testing/Lab3Testing/src/test/resources/chromedriverlinux
       - name: Build with Maven
         run: mvn test
